# cg_petsc

./: CMakeLists.txt
include/: SyPDSolver.hpp
src/: SyPDSolver.cpp  cg.cpp
